--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* Variables */
-
 :root {
   --basic-black: #000000;
   --basic-white: #FFFFFF;
@@ -31,7 +29,7 @@
 }
 
 body {
-  min-width: 960px;
+  min-width: 940px;
   margin: 0;
   padding: 0;
   font-family: 'Cuprum', 'PT Sans', 'Calibri', sans-serif;
@@ -49,6 +47,22 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.page {
+  height: 100%;
+}
+
+.container {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.page-body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 .visually-hidden {
@@ -142,34 +156,61 @@ img {
   text-transform: uppercase;
   color: var(--basic-white);
   background-color: var(--basic-red);
+  text-align: center;
 }
 
 .main-header {
+  margin-bottom: 59px;
   background-color: var(--basic-background);
 }
 
 .header-top-row {
+  display: grid;
+  grid-template-columns: 220px 1fr 2fr;
+  grid-template-rows: 42px;
   background-color: var(--extra-dark-background);
+  align-items: center;
 }
 
 .header-top-row-list {
+  grid-column: 3 / 4;
+  justify-self: end;
+  display: grid;
+  grid-template-columns: 150px 150px 150px;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .small-logo {
+  grid-column: 1 / 2;
   font-size: 24px;
   text-transform: uppercase;
   color: var(--basic-white);
   background-color: var(--basic-red);
+  text-align: center;
 }
 
 .small-logo:visited {
   background-color: var(--error);
 }
 
-.bookmarks-link,
-.shopping-cart-link,
+.bookmarks-link {
+  grid-column: 1 / 2;
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--basic-white);
+}
+
+.shopping-cart-link {
+  grid-column: 2 / 3;
+  font-size: 18px;
+  line-height: 24px;
+  color: var(--basic-white);
+}
+
 .submit-order-button {
+  grid-column: 3 / 4;
   font-size: 18px;
   line-height: 24px;
   color: var(--basic-white);
@@ -191,6 +232,8 @@ img {
 .submit-order-button {
   background-color: var(--basic-green);
 }
+
+
 
 .search-form input {
   border: none;
@@ -214,11 +257,25 @@ img {
   color: var(--basic-black);
 }
 
+.header-middle-row-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 153px;
+  justify-content: center;
+  align-items: center;
+}
+
 .short-site-description {
   font-size: 16px;
   font-style: italic;
   line-height: 23px;
   color: var(--basic-red);
+  margin-left: 30px;
+}
+
+.header-contacts {
+  justify-self: center;
+  text-align: center;
 }
 
 .header-phonenumber {
@@ -236,6 +293,11 @@ img {
 
 .personal-account-buttons {
   list-style: none;
+  justify-self: end;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .login-button,
@@ -264,8 +326,19 @@ img {
 }
 
 .site-navigation {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: 60px;
   list-style: none;
+  margin: 0;
+  padding: 0;
   background-color: var(--basic-darkgrey);
+  text-align: center;
+}
+
+.site-navigation li {
+  padding-top: 16px;
 }
 
 .site-navigation a {
@@ -282,6 +355,12 @@ img {
   color: var(--transparent-white);
 }
 
+.promo-products-and-services {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 59px;
+}
+
 .slider-header {
   font-size: 36px;
   line-height: 36px;
@@ -292,12 +371,24 @@ img {
 
 .products-and-services-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-template-rows: 123px 123px 123px;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+.products-and-services-item {
+  padding-left: 22px;
 }
 
 .products-and-services-item-header {
   font-size: 24px;
   line-height: 30px;
   font-weight: bold;
+  margin-bottom: 14px;
   color: var(--basic-white);
 }
 
@@ -328,13 +419,42 @@ img {
   background-color: var(--purple);
 }
 
-.products-and-services-list li:nth-child(4) {
+.products-and-services-list li:nth-child(5) {
   background-color: var(--light-green);
 }
 
-.featured-products-header,
-.featured-manufacturers-header {
+.products-and-services-item-slider {
+  grid-column: 1 / 3;
+  grid-row: 2 / 4;
+}
+
+.featured-products-list {
+  display: grid;
+  grid-template-columns: repeat(4, 220px);
+  gap: 20px;
+  padding-left: 0;
+}
+
+.featured-products-header {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
   background-color: var(--lightsand-background);
+}
+
+.featured-products-header a {
+  margin: 25px 14px 26px auto;
+  padding: 11px 38px 9px 39px;
+}
+
+.featured-manufacturers-header {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  background-color: var(--lightsand-background);
+}
+
+.featured-manufacturers-header a {
+  margin: 25px 14px 26px auto;
+  padding: 11px 38px 9px 39px;
 }
 
 .featured-products-title,
@@ -344,6 +464,14 @@ img {
   font-weight: normal;
   text-transform: uppercase;
   color: var(--basic-darkgrey);
+  margin: 29px auto 30px 28px;
+}
+
+.featured-manufacturers-list {
+  padding-left: 0;
+  display: grid;
+  grid-template-columns: repeat(4, 220px);
+  gap: 20px;
 }
 
 .featured-products-card-title,
@@ -353,6 +481,9 @@ img {
   font-weight: bold;
   font-family: 'PT Sans';
   color: var(--basic-black);
+  padding-left: 18px;
+  padding-right: 17px;
+  text-align: center;
 }
 
 .featured-products-card-old-price,
@@ -363,6 +494,9 @@ img {
   font-family: 'PT Sans';
   text-decoration: line-through;
   color: var(--text-grey);
+  padding-left: 24px;
+  padding-right: 24px;
+  text-align: center;
 }
 
 .featured-products-card-new-price,
@@ -372,6 +506,9 @@ img {
   font-weight: bold;
   font-family: 'PT Sans';
   color: var(--basic-white);
+  padding-left: 24px;
+  padding-right: 24px;
+  text-align: center;
   background-color: var(--basic-red);
 }
 
@@ -379,8 +516,20 @@ img {
   background-color: var(--basic-background);
 }
 
+.services-title {
+  padding-top: 64px;
+}
+
+.services-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin-top: 70px;
+}
+
 .services-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .services-list-item-link {
@@ -420,16 +569,48 @@ img {
   background: no-repeat url('../img/credit.png');
 }
 
-.shipping-companies-list {
-  list-style-image: url('../img/red-line-marker.svg');
+.secondary-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 179px;
+  justify-content: start;
+  margin-bottom: 70px;
 }
 
-.bottom-infoblock,
-.bottom-infoblock .site-navigation {
+.shipping-companies-list {
+  list-style-image: url('../img/red-line-marker.svg');
+  margin: 0;
+  padding: 0;
+}
+
+.bottom-infoblock {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   background-color: var(--basic-darkgrey);
 }
 
+.bottom-infoblock {
+  padding-bottom: 67px;
+  background-color: var(--basic-darkgrey);
+  vertical-align: top;
+}
+
+.site-navigation-secondary {
+  list-style: none;
+  margin: 0 0 34px 0;
+  padding: 37px 0 0 0;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  column-gap: 58px;
+  justify-content: center;
+  justify-self: end;
+}
+
 .large-logo {
+  padding: 21px 42px 25px 42px;
+  margin-bottom: 0;
+  text-align: center;
+  width: 136px;
   font-size: 30px;
   text-transform: uppercase;
   color: var(--basic-white);
@@ -452,8 +633,17 @@ img {
   color: var(--transparent-white);
 }
 
+.bottom-infoblock-contacts p {
+  margin-bottom: 0;
+}
+
 .product-categories-list {
   list-style: none;
+  margin: 18px 0 0 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-self: end;
 }
 
 .product-categories-list a {
@@ -473,11 +663,29 @@ img {
 }
 
 .main-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: var(--extra-dark-background);
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+.footer-grid-column:nth-child(2) {
+  justify-self: center;
 }
 
 .social-links-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  justify-self: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.social-links-list-item {
+  padding: 0;
+  margin: 0;
 }
 
 .footer-link {
@@ -496,6 +704,10 @@ img {
   color: var(--basic-red);
 }
 
+.footer-text {
+  margin: 0;
+}
+
 .social-button {
   background-color: var(--extra-dark-background);
 }
@@ -503,6 +715,10 @@ img {
 .social-button:hover,
 .social-button:visited {
   background-color: var(--basic-red);
+}
+
+.social-button img {
+  vertical-align: middle;
 }
 
 .feedback-form input::placeholder,
@@ -537,6 +753,8 @@ img {
 
 .breadcrumbs-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .list-item-with-custom-bullet::before {
@@ -571,6 +789,8 @@ img {
 
 .sorter-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .sorter-text-button {
@@ -717,6 +937,8 @@ img {
 
 .pagination {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .page-link {
