--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,10 @@ img {
   background-color: var(--basic-background);
 }
 
+.light-wrapper {
+  background-color: var(--basic-background);
+}
+
 .extradark-wrapper {
   background-color: var(--extra-dark-background);
 }
@@ -306,6 +310,10 @@ img {
   grid-template-columns: 1fr 1fr;
 }
 
+.personal-account-buttons li {
+  justify-self: center;
+}
+
 .login-button,
 .signup-button,
 .personal-account-button {
@@ -328,7 +336,14 @@ img {
 }
 
 .personal-account-block {
+  justify-self: center;
+  grid-column: 1 / 3;
   background-color: var(--basic-white);
+}
+
+.personal-account-links {
+  justify-self: center;
+  grid-column: 1 / 3;
 }
 
 .site-navigation {
@@ -772,18 +787,48 @@ img {
   color: var(--basic-greylight);
 }
 
+.catalog-grid {
+  display: grid;
+  grid-template-columns: 220px 1fr;
+  column-gap: 20px;
+}
+
+.catalog-page {
+  grid-column: 1 / 3;
+}
+
 .breadcrumbs-list {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
+.breadcrumbs-list li {
+  display: inline;
+}
+
 .list-item-with-custom-bullet::before {
   content: url('../img/small-right-arrow.svg');
 }
 
+.products-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
 .products-category-title {
+  padding: 30px;
   background-color: var(--basic-background);
+}
+
+.price-filter {
+  width: 220px;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .sorter,
@@ -793,12 +838,35 @@ img {
   border: none;
 }
 
+.price-scroller {
+  grid-column: 1 / 4;
+  width: 180px;
+  justify-self: center;
+}
+
+.sorter {
+  grid-column: 1 / 4;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  padding-left: 19px;
+  padding-right: 19px;
+}
+
 .price-filter input:placeholder {
   font-size: 18px;
   line-height: 24px;
   color: var(--basic-white);
 }
 
+.min-price,
+.max-price {
+  text-align: center;
+  width: 95px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.filter-title,
 .sorter-title {
   font-size: 13px;
   line-height: 18px;
@@ -806,12 +874,27 @@ img {
   font-weight: normal;
   text-transform: uppercase;
   color: var(--basic-black);
+  background-color: var(--beige);
+}
+
+.filter-title {
+  padding-left: 18px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .sorter-list {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  justify-content: center;
+}
+
+.sorter-list li {
+  text-align: center;
 }
 
 .sorter-text-button {
@@ -823,6 +906,7 @@ img {
   color: var(--basic-black);
   opacity: 30%;
   text-decoration: underline dotted var(--basic-red);
+  justify-self: center;
 }
 
 .sorter-text-button:hover {
@@ -884,6 +968,18 @@ img {
   line-height: 18px;
   font-family: 'PT Sans';
   color: var(--basic-black);
+}
+
+.manufacturers-filter {
+  display: grid;
+  gap: 20px;
+  padding: 0;
+}
+
+.power-filter {
+  display: grid;
+  gap: 20px;
+  padding: 0;
 }
 
 .manufacturers-filter label,
@@ -962,6 +1058,10 @@ img {
   padding: 0;
 }
 
+.pagination li {
+  display: inline;
+}
+
 .page-link {
   font-size: 13px;
   line-height: 18px;
@@ -975,5 +1075,13 @@ img {
 }
 
 .article {
-  background-color: var(--basic-background);
+  grid-column: 1 / 3;
+}
+
+.article-title {
+  padding-top: 64px;
+}
+
+.article-text {
+  padding-bottom: 68px;
 }
