--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 body {
   min-width: 960px;
   margin: 0;
-  padding: 0 20px;
+  padding: 0;
   font-family: 'Cuprum', 'PT Sans', 'Calibri', sans-serif;
   font-size: 18px;
   line-height: 24px;
