--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ img {
   grid-template-columns: 220px 1fr 2fr;
   grid-template-rows: 42px;
   align-items: center;
+  place-items: stretch;
 }
 
 .header-top-row-list {
@@ -192,6 +193,15 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
+  place-items: stretch;
+}
+
+.header-top-row-list a {
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+  padding: 0;
+  vertical-align: middle;
 }
 
 .small-logo {
@@ -201,10 +211,20 @@ img {
   color: var(--basic-white);
   background-color: var(--basic-red);
   text-align: center;
+  display: inline-block;
+  vertical-align: middle;
+  height: 75%;
+  padding-top: 10px;
 }
 
 .small-logo:visited {
   background-color: var(--error);
+}
+
+.search-input {
+  padding-left: 42px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .bookmarks-link {
